2005-01-31  Werner Lemberg  <wl@gnu.org>

	* mf/feta-nummer.mf: Removed.  Unused.

2005-01-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ : 2004 -> 2005 s&r

	* scm/file-cache.scm (cached-file-contents): add file. Read each
	file only once.

	* scm/font.scm (add-pango-fonts): change order. Medium weight is
	now default.

	* VERSION: release 2.5.10
	
	* mf/GNUmakefile (INSTALLATION_OUT_FILES4): install cff.ps files.

	* make/ly-rules.make ($(outdir)/%.texi): detect new EOF marker.

	* scm/framework-ps.scm (dump-stencil-as-EPS): robustness: ensure
	that both X and Y extents of bbox are non-nil.

2005-01-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/chord-name.scm (alteration->text-accidental-markup): change
	- to . 

	* scm/output-ps.scm (utf8-string): add utf8-string for completeness.

	* scm/framework-ps.scm (dump-stencil-as-EPS): new function

	* Documentation/user/invoking.itely (Invoking lilypond): add note
	about EPS backend.

	* scm/framework-eps.scm: new file: create per-system/per-page EPS
	files for inclusion in lilypond-book document.

	* input/tutorial/lbook-latex-test.tex: rename from lilbook.tex

	* input/tutorial/lbook-texi-test.texi: new file.

	* scm/safe-lily.scm (safe-objects): add
	{begin,end}-of-line-(in)?visible as safe.
 
2005-01-30  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/changing-defaults.itely: fixed example
	of (dynamics).

2005-01-29  Graham Percival  <gperlist@shaw.ca>

	* lily/main.cc: fix info about -o=FILE.

2005-01-29  Werner Lemberg  <wl@gnu.org>

	* mf/feta-toevallig.mf ("Natural"): Completely changed the
	construction to assure smooth transition from straight to curved
	lines.

2005-01-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/stencil.cc (moved_to_edge): don't halt on adding empty
	stencils.

	* ps/lilyponddefs.ps: add start-page, start-system doesn't
	translate to top of page. Fixes alignment problems of
	lilypond-generated EPS files.

2005-01-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
